<resources>
    <string name="main_exit">Are you sure you want to exit the %s app?</string>
    <string name="app_yes">Yes</string>
    <string name="app_no">No</string>
    <string name="ui_fill_in_the_complete">Please fill in completely</string>
    <string name="home_exit">Press again to exit</string>
    <string name="clause_submit">Agree</string>
    <string name="clause_disagree">Do Not Agree</string>
    <string name="policy_close">Close</string>
    <string name="clause_msg_key1">User Agreement</string>
    <string name="clause_msg_key2">Privacy Strategy</string>
    <string name="setting_version">Version</string>
    <string name="app_cancel">Cancel</string>
    <string name="person_change_password">Change Password</string>
    <string name="app_confirm">Confirm</string>
    <string name="copyright_statement">Copyright Statement</string>
    <string name="report_delete">Delete</string>
    <string name="set_disclaimer">Disclaimer</string>
    <string name="tip_drag_refresh">Pull to refresh</string>
    <string name="sign_email">Email Address</string>
    <string name="person_email">Personal Email Address</string>
    <string name="setting_model">Temperature Correction</string>
    <string name="setting_feedback">Feedback</string>
    <string name="app_language">Language</string>
    <string name="tip_loading_more">Loading</string>
    <string name="app_sign_in">Log In</string>
    <string name="tip_loosen_load">Release to load more</string>
    <string name="person_name">Name</string>
    <string name="setting_http_error">Network Error</string>
    <string name="ui_same_as_old_noes">New password cannot be the same as the old one</string>
    <string name="app_next">Next</string>
    <string name="tip_no_more_data">No more data</string>
    <string name="app_ok">OK</string>
    <string name="tip_password_inconsistency">Inconsistent passwords</string>
    <string name="login_password_error_tip">Enter 8 to 30 characters using a combination of letters and numbers</string>
    <string name="battery_start_select_tip">Please complete the information</string>
    <string name="tip_enter_password">Enter Password</string>
    <string name="tip_fill_information">Fill in information</string>
    <string name="tip_please_photo_permissions">Authorize access to photos</string>
    <string name="privacy_statement">Privacy Statement</string>
    <string name="app_report">Report</string>
    <string name="http_time_out">Request timed out</string>
    <string name="person_save">Save</string>
    <string name="tip_save_success">Saved</string>
    <string name="report_select_all">Select All</string>
    <string name="language_choose">Language</string>
    <string name="app_setting">Setting</string>
    <string name="battery_share">Share</string>
    <string name="tip_share_succeeded">Sharing succeeded</string>
    <string name="tip_share_failed">Sharing failed</string>
    <string name="app_submit">Submit</string>
    <string name="tip_photo_saved">Photo saved</string>
    <string name="tip_change_password_error">Old password incorrect</string>
    <string name="scan_ble_tip_authorize">Prompt: Please authorize</string>
    <string name="battery_test_input_tip">Input range exceeded!</string>
    <string name="set_version">Version</string>
    <string name="set_clear_cache">Clear Cache</string>
    <string name="setting_firmware_update">Firmware Upgrade</string>
    <string name="feedback_text_tip">Describe your problem</string>
    <string name="tip_loading">Please wait…</string>
    <string name="person_headshot">Profile Photo</string>
    <string name="person_log_out">Log Out</string>
    <string name="person_headshot_change">Change Profile Photo</string>
    <string name="person_headshot_camera">Take Photo</string>
    <string name="person_headshot_phone">Choose from Album</string>
    <string name="person_headshot_no_camera">Your device does not support taking photos</string>
    <string name="person_info">Personal Information</string>
    <string name="person_old_password">Enter old password</string>
    <string name="person_new_password">Enter new password</string>
    <string name="person_new_password2">Re-enter new password</string>
    <string name="app_submit_success">Submitted! \nThank you for your support. We value your feedback.</string>
    <string name="setting_firmware_update_latest_version">This is already the latest version.</string>
    <string name="setting_firmware_update_get_information">Obtaining version information. Please wait…</string>
    <string name="setting_firmware_update_get_information_error">Failed to obtain version information. Please retry.</string>
    <string name="setting_firmware_update_updating">Upgrading firmware. Please wait…</string>
    <string name="setting_firmware_update_updating_error">Failed to upgrade the firmware. Please retry.</string>
    <string name="setting_firmware_update_updating_successful">Firmware upgrade successful.</string>
    <string name="setting_firmware_update_version">Current version:</string>
    <string name="setting_firmware_update_uversion">Available upgrade:</string>
    <string name="setting_firmware_update_content">Upgrades:</string>
    <string name="setting_firmware_update_zip_error">Unzipped file error. Please download again!</string>
    <string name="setting_firmware_update_unknown">Unknown device. Please reconnect.</string>
    <string name="setting_firmware_update_checking">Checking data. Please wait.</string>
    <string name="firmware_update_tip">Using mobile connection. Do you want to continue downloading?</string>
    <string name="firmware_update_close_tip">Note: Do not exit the current page or the app when the firmware is updating.</string>
    <string name="battery_test_explain">Statement</string>
    <string name="test_results_delete_success">Deletion succeeded</string>
    <string name="test_results_delete_failed">Failed to delete some data</string>
    <string name="test_stop_test">Do not repeat testing within 10 seconds</string>
    <string name="real_time_seconds">Second</string>
    <string name="real_time_minutes">Minute</string>
    <string name="real_time_hours">Hour</string>
    <string name="real_time_day">Day</string>
    <string name="chart_current">Current</string>
    <string name="chart_real_time">Real time</string>
    <string name="chart_set_interval">Set Record Interval</string>
    <string name="chart_set_interval_over">Record interval set</string>
    <string name="test_delete">Do you want to delete the current test report?</string>
    <string name="test_delete_cache">Do you want to delete the voltage cache?</string>
    <string name="chart_history">History</string>
    <string name="chart_select_time">Select Starting Time</string>
    <string name="chart_start_time">Starting Time</string>
    <string name="http_code_else">Abnormal request</string>
    <string name="app_connect">Connected</string>
    <string name="app_no_connect">Not connected</string>
    <string name="thermal_enhance">Image Augmentation Mode</string>
    <string name="app_question">FAQ</string>
    <string name="question_agree">Solved</string>
    <string name="question_disagree">Unsolved</string>
    <string name="app_message">Message</string>
    <string name="main_thermal">Thermal Imaging</string>
    <string name="main_thermal_motion">Temperature Monitoring</string>
    <string name="main_gallery">Gallery</string>
    <string name="main_person">Personal Information</string>
    <string name="device_connect_tip">The device is not connected with your phone. Please connect.</string>
    <string name="app_gallery">Gallery</string>
    <string name="thermal_threshold_setting">Set Temperature Limits</string>
    <string name="app_close">Close</string>
    <string name="app_record">Record</string>
    <string name="tip_least_select">Select at least one item</string>
    <string name="chosen_item">%d items selected</string>
    <string name="tip_delete_chosen">Do you want to delete the %d items currently selected?</string>
    <string name="app_video">Video</string>
    <string name="my_message">My message</string>
    <string name="warranty">Service</string>
    <string name="thermal_point">Dot</string>
    <string name="thermal_line">Line</string>
    <string name="thermal_rect">Plane</string>
    <string name="thermal_full_rect">Full Image</string>
    <string name="thermal_delete">Delete</string>
    <string name="thermal_rotate">Rotate</string>
    <string name="thermal_sharpen">Details</string>
    <string name="thermal_contrast">Contrast</string>
    <string name="thermal_picture_in_camera">PIP</string>
    <string name="thermal_pseudo">Pseudo color bar</string>
    <string name="thermal_false_color">False color</string>
    <string name="app_diy">DIY</string>
    <string name="thermal_automatic">Automatic Recognition</string>
    <string name="thermal_high_temperature">High Temperature</string>
    <string name="thermal_normal_temperature">Normal Temperature</string>
    <string name="monitor_start">Start Recording</string>
    <string name="monitor_create_chart">Generate Image</string>
    <string name="monitor_query_log">View Record</string>
    <string name="temperature_limit_upper">Max</string>
    <string name="temperature_limit_lower">Min</string>
    <string name="thermal_default_model">Default Mode</string>
    <string name="thermal_custom_mode">Customize Mode</string>
    <string name="thermal_model_tip">Appendix: Emissivity Table of Common Materials</string>
    <string name="thermal_config_environment">Ambient Temperature</string>
    <string name="thermal_config_distance">Distance to Spot</string>
    <string name="thermal_config_radiation">Emissivity</string>
    <string name="tip_myself_model">Do you want to add a Customize Mode?</string>
    <string name="tip_config_delete">Do you want to delete %s?</string>
    <string name="monitor_second">Second</string>
    <string name="monitor_minute">Minute</string>
    <string name="monitor_hour">Hour</string>
    <string name="monitor_day">Day</string>
    <string name="setting_unit">Temperature Units</string>
    <string name="tip_otg_no_show">Don\'t Remind Me Again</string>
    <string name="auto_shutter">Auto Shutter</string>
    <string name="app_tip">Tips</string>
    <string name="search_learn_more">Learn More</string>
    <string name="save_setting_model">Save Settings</string>
    <string name="shutter_tips">To ensure accurate measurements, the shutter of the thermal camera is activated every few dozen seconds, causing the screen to freeze for about one second. If you prefer a smoother video effect, you can disable the Auto Shutter feature.</string>
    <string name="tip_correction_2_title">2. Connect the thermal imager to your phone and have the lens towards a black and non-reflective surface. The surface should meet below requirements:</string>
    <string name="tip_correction_2_content">The surface temperature should be uniform (it could be a black metal plate, wooden board, or plastic plate, etc.) \n· The distance between the device and the surface should be 5-10cm\n· The shooting image should be covered by the surface\n· The calibration process should be performed in a dark environment.</string>
    <string name="tip_correction_3">3. Face the thermal imager to the black board, tap "Start calibration", and wait for 60 seconds to complete the calibration process. Do not turn off the screen or switch to other apps during the calibration process.</string>
    <string name="correction_title">Image Calibration</string>
    <string name="dual_light_title">Dual light correction</string>
    <string name="start_correction">Start Calibration</string>
    <string name="app_got_it">Got it</string>
    <string name="connect_auto_open">The device will automatically start after connection.</string>
    <string name="more_device_info">Device Info</string>
    <string name="more_device_reset">Restore Factory Settings</string>
</resources>