<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    android:background="@drawable/bg_tip_shutter_card">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/dialog_tip_shutter_close"
        android:contentDescription="@null"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_shutter"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_tip_msg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/shutter_tips"
        android:textSize="@dimen/app_font"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <CheckBox
        android:id="@+id/dialog_tip_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:button="@drawable/ic_check"
        android:text="@string/tip_otg_no_show"
        android:textSize="@dimen/app_font_15"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_tip_msg_text" />

    <TextView
        android:id="@+id/tv_i_know"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/app_got_it"
        android:textSize="16sp"
        android:textColor="#55272F"
        android:background="@drawable/bg_corners05_solid_theme"
        app:layout_constraintDimensionRatio="235:44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_tip_check" />
</androidx.constraintlayout.widget.ConstraintLayout>