<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="24dp"
    android:paddingHorizontal="20dp"
    android:background="@drawable/bg_corners10_solid_3b3e44">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_tip"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textColor="@color/white"
        tools:text="在image上绘制一根line段，查看line段内的temperature变化趋势。"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.topdon.lib.core.view.MyTextView
        android:id="@+id/tv_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:text="@string/tip_otg_no_show"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:drawablePadding="6dp"
        android:drawableStart="@drawable/selector_radio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_message" />

    <!-- 我知道了 -->
    <TextView
        android:id="@+id/tv_i_know"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="11dp"
        android:gravity="center_horizontal"
        android:text="@string/app_got_it"
        android:textSize="16sp"
        android:textColor="#55272F"
        android:background="@drawable/bg_corners05_solid_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select" />

</androidx.constraintlayout.widget.ConstraintLayout>